[package]
name = "noj_sandbox"
version = "0.1.0"
edition = "2021"
authors = ["aokblast aokblast@FreeBSD.org"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
fork = "0.1.22"
tempfile = "3.6.0"
nix = "0.26.2"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
libnoj = { path = "src/lib/" }

[workspace]
members = [
    "src/plugin/*",
    "src/lib/",
    # integration tests
    "tests",
]
