[package]
name = "noj_sandbox"
version = "0.1.0"
edition = "2021"
authors = ["aokblast aokblast@FreeBSD.org"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cgroups-rs = "0.4.0"
clap = { version = "4.3.12", features = ["derive"] }
dlopen = "0.1.0"
dlopen_derive = "0.1.4"
libnoj = { path = "src/lib/" }
log = { version = "0.4.28", features = ["kv"] }
nix = { version = "0.31.2", features = ["signal"] }
tokio = { version = "1.48.0", features = ["process", "time", "sync", "rt", "macros", "rt-multi-thread"] }

[workspace]
members = [
    "src/plugin/*",
    "src/lib/",
]
