[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
libnoj = { path = "../src/lib" }
toml = "0.7.6"
predicates = "3.0.3"
